--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.CSQComponentes.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,11 +54,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=rpgcharactermaker.RPGCharacterMaker
+main.class=view.MainWindow
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.CSQComponentes=../CSQComponents
+reference.CSQComponentes.jar=${project.CSQComponentes}/dist/CSQComponentes.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
