--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,15 +29,13 @@ dist.jar=${dist.dir}/RPGCharacterMaker.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.itextpdf-5.2.0.jar=C:\\Users\\csqueiroz\\Downloads\\itextpdf-5.2.0.jar\\itextpdf-5.2.0.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${reference.CSQComponentes.jar}:\
-    ${file.reference.itextpdf-5.2.0.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -63,8 +61,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.CSQComponentes=../CSQComponents
-reference.CSQComponentes.jar=${project.CSQComponentes}/dist/CSQComponentes.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
